--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "emotion": "^10.0.27",
     "gatsby": "^2.23.12",
+    "gatsby-plugin-emotion": "^4.3.10",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-sass": "^2.3.12",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
